--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "py-speech-service"
-version = "0.0.11"
+version = "0.0.12"
 description = ""
 authors = ["MattEqualsCoder <mattequalscoder@gmail.com>"]
 readme = "README.md"
@@ -21,6 +21,7 @@ asyncio = "^3.4.3"
 numpy = "^2.2.2"
 platformdirs = "^4.3.6"
 yapper-tts = "^0.2.5"
+certifi = "^2025.1.31"
 
 [build-system]
 requires = ["poetry-core"]
