--- a/csharp/PySpeechService.Recognition/PySpeechService.Recognition.csproj
+++ b/csharp/PySpeechService.Recognition/PySpeechService.Recognition.csproj
@@ -1,16 +1,27 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-        <PackageId>MattEqualsCoder.PySpeechService.Recognition</PackageId>
-        <Authors>MattEqualsCoder.PySpeechService.Recognition</Authors>
-        <Version>0.1.0</Version>
-    </PropertyGroup>
+  <PropertyGroup>
+    <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+    <PackageId>MattEqualsCoder.PySpeechService.Recognition</PackageId>
+    <Version>0.1.0</Version>
+    <Title>PySpeechService Recognition Models</Title>
+    <Authors>MattEqualsCoder</Authors>
+    <Description>Nuget package for models for utilizing the PySpeechService application for VOSK speech recognition</Description>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/MattEqualsCoder/PySpeechService</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/MattEqualsCoder/PySpeechService</RepositoryUrl>
+  </PropertyGroup>
 
-    <ItemGroup>
-      <PackageReference Include="System.Speech" Version="9.0.3" />
-    </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="System.Speech" Version="9.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="../README.md" Pack="true" PackagePath="README.md" />
+  </ItemGroup>
 
 </Project>
